src/objects/SafetyStatus__c.object
<CustomObject>
    <fields>
        <fullName>Alert__c</fullName>
        <label>警告</label>
        <referenceTo>Alert__c</referenceTo>
        <relationshipName>SafetyNotice</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CurrentGeolocation__c</fullName>
        <label>CurrentGeolocation</label>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>CurrentLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>現在地</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>SafetyNotice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HelpStatus__c</fullName>
        <label>状況</label>
        <picklist>
            <picklistValues>
                <fullName>連絡済</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>救助待ち</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>救助中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>安否確認済</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsHelp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HELP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfPeopleInNeed__c</fullName>
        <defaultValue>1</defaultValue>
        <label>人数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ユーザ</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SafetyNotice</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>安否状況</label>
    <nameField>
        <displayFormat>安否確認-{000000}</displayFormat>
        <label>安否確認</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>